[metadata]
name = smarthomeconnect
version = 0.9.0
url = https://github.com/mhthies/smarthomeconnect
author = Michael Thies
author_email = mail@mhthies.de
project_urls =
    Documentation = https://smarthomeconnect.readthedocs.org/
    Source = https://github.com/mhthies/smarthomeconnect
    Tracker = https://github.com/mhthies/smarthomeconnect/issues
description = The Smart Home Connect home automation framework based on AsyncIO
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = NOTICE, LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Topic :: Home Automation
    Framework :: AsyncIO

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = ~=3.7
install_requires =
    aiohttp>=3.6,<4
    jinja2>=2.11,<4
    MarkupSafe>=1.1,<3

[options.extras_require]
mysql = aiomqtt>=2.0.0,<3
knx = knxdclient>=0.4.0,<2
dmx = pyserial-asyncio>=0.3,<0.7
midi =
    mido>=1.2.9,<2
    python-rtmidi>=1.4.6,<2
# aiomqtt introduced get_running_loop() call in Client's constructor, which does not work with our current procedure of
# constructing the client before starting the event loop.
mqtt = aiomqtt>=2.0.0,<2.3.1
pulse = pulsectl_asyncio>=1.0.0,<2
telegram = aiogram>=3.0,<4
file_persistence = aiofile>=3.7.4,<4

[options.package_data]
shc.web = static/pack/*

[options.packages.find]
exclude=
    test
    test.*
